--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -39,7 +39,7 @@
             <li><a href="../HomePage/index.html">home </a></li>
             <li><a href="#services">services</a></li>
             <li><a href="#portfolio">portfolio</a></li>
-            <li><a href="#meetus">meet us</a></li>
+            <li><a href="../MeetUsPage/meetus.html">meet us</a></li>
             <li><a href="../SecondPage/secondPage.html">contact</a></li>
           </ul>
         </nav>
