--- a/MeetUsPage/meetus.html
+++ b/MeetUsPage/meetus.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="homePage-main.css" />
     <link rel="stylesheet" href="homePage-footer.css" />-->
     <link rel="stylesheet" href="meetus.css" />
+
     <!-- <link rel="stylesheet" href="index.html" /> -->
 
     <link
@@ -39,17 +40,21 @@
     <header>
       <!-- <h1 class="header-h">Femina &ltLink&gt</h1> -->
       <nav>
-        <!-- <a href="index.html"><img src="images/logo2.png"></a> -->
+        <h1 class="header-wording">
+          <a href="../HomePage/index.html"></a> Femina &ltLink&gt
+        </h1>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">&ltservices&gt</a></li>
-            <li><a href="">&ltportfolio&gt</a></li>
-            <li><a href="">&ltmeet us&gt</a></li>
-            <li><a href="">&ltcontact&gt</a></li>
+            <li><a href="../HomePage/index.html">home </a></li>
+            <li><a href="">services</a></li>
+            <li><a href="">portfolio</a></li>
+            <li><a href="../MeetUsPage/meetus.html">meet us</a></li>
+            <li><a href="../SecondPage/secondPage.html">contact</a></li>
           </ul>
         </div>
-        <i class="fa fa-bars" onclick="showMenu()"></i>
+        <!-- java script -->
+        <!-- <i class="fa fa-bars" onclick="showMenu()"></i> -->
       </nav>
     </header>
     <!-- Here ends HEADER -->
@@ -77,7 +82,7 @@
         <h1 class="meet-us-h1 our-team">our team</h1>
         <div class="row">
           <div class="us">
-            <img src="images/pic2.jpg" />
+            <img src="../Images/pic2.jpg" />
             <div class="layer">
               <div class="layer-h-p">
                 <h3>Amelia Blair</h3>
@@ -91,7 +96,7 @@
             </div>
           </div>
           <div class="us">
-            <img src="images/pic1.jpg" />
+            <img src="../Images/pic1.jpg" />
             <div class="layer">
               <div class="layer-h-p">
                 <h3>Cristina Joy</h3>
@@ -105,7 +110,7 @@
             </div>
           </div>
           <div class="us">
-            <img src="images/pic3.jpg" />
+            <img src="../Images/pic3.jpg" />
             <div class="layer">
               <div class="layer-h-p">
                 <h3>Robyn Wright</h3>
@@ -123,7 +128,7 @@
           <h1 class="meet-us-h1">your experience</h1>
           <div class="row">
             <div class="testimonial-col">
-              <img src="images/user2.jpg" />
+              <img src="../Images/user2.jpg" />
               <div>
                 <p>
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -141,7 +146,7 @@
             </div>
 
             <div class="testimonial-col">
-              <img src="images/user1.jpg" />
+              <img src="../Images/user1.jpg" />
               <div>
                 <p>
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -181,8 +186,8 @@
           <h2>SITE MAP</h2>
           <a href="#">SERVICES</a>
           <a href="#">PORTFOLIO</a>
-          <a href="#">MEET US</a>
-          <a href="#">CONTACT</a>
+          <a href="../MeetUsPage/meetus.html">MEET US</a>
+          <a href="../SecondPage/secondPage.html">CONTACT</a>
         </div>
         <div class="footer-heading footer-2">
           <h2>SERVICES</h2>
@@ -210,7 +215,7 @@
     </footer>
     <!-- Here ends FOOTER -->
     <!------JavaScript for Toggle Menu------>
-    <script>
+    <!-- <script>
       var navLinks = document.getElementById("navLinks");
 
       function showMenu() {
@@ -219,6 +224,6 @@
       function hideMenu() {
         navLinks.style.right = "-200px";
       }
-    </script>
+    </script> -->
   </body>
 </html>
