Final changes to meet us page css and html

--- a/MeetUsPage/meetus.html
+++ b/MeetUsPage/meetus.html
@@ -44,9 +44,8 @@
           <a href="../HomePage/index.html"></a> Femina &ltLink&gt
         </h1>
         <div class="nav-links" id="navLinks">
-          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <!-- <i class="fa fa-times" onclick="hideMenu()"></i> -->
           <ul>
-            <li><a href="../HomePage/index.html">home </a></li>
             <li><a href="">services</a></li>
             <li><a href="">portfolio</a></li>
             <li><a href="../MeetUsPage/meetus.html">meet us</a></li>
@@ -174,7 +173,9 @@
         Do you have an exciting strategic project coming up <br />
         that you would like to talk about?
       </h2>
-      <a href="" class="hero-btn inquiry-btn">SEND INQUIRY</a>
+      <a href="../SecondPage/secondPage.html" class="hero-btn inquiry-btn"
+        >SEND INQUIRY</a
+      >
       <a href="" class="hero-btn call-btn">SCHEDULE A CALL</a>
     </section>
     <!-- Here ends Let's talk about your website project -->
