some tiny changes

--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -43,7 +43,10 @@
             <li><a href="../SecondPage/secondPage.html">contact</a></li>
           </ul>
         </nav>
-        <h1 class="header-wording"><a href="./index.html"></a> Femina Link</h1>
+        <h1 class="header-wording">
+          <a href="./index.html"></a> Femina &ltLink&gt
+        </h1>
+        <!-- java script -->
         <p>Award-winning digital creativity</p>
       </section>
     </header>
