--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -49,11 +49,12 @@
         <li><a href="../HomePage/index.html">home </a></li>
         <li><a href="#services">services</a></li>
         <li><a href="#portfolio">portfolio</a></li>
-        <li><a href="#meetus">meet us</a></li>
+        <li><a href="../MeetUsPage/">meet us</a></li>
         <li><a href="../SecondPage/secondPage.html">contact</a></li>
+
       </ul>
     </nav>
-    <h1 class="header-wording"><a href="./index.html"></a> Femina Link</h1>
+    <h1 class="header-wording"><a href="./index.html"></a> Femina &ltLink&gt</h1>
     <p>Award-winning digital creativity</p>
   </section>
 </header>
