--- a/MeetUsPage/meetus.html
+++ b/MeetUsPage/meetus.html
@@ -26,7 +26,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <title>Femina Link Homepage</title>
+    <title>Femina Link Meet Us page</title>
   </head>
   <body>
     <!-- Sticky button -->
