added JS to header on homepage and second page

--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -42,21 +42,37 @@
   <body>
 
 <!-- Here starts HEADER -->
-
 <header>
-  
   <section class="header-whole">
-    <nav class="navbar">
-      <ul class="navbarlist">
-        <li><a href="../HomePage/index.html">home </a></li>
+    <div class="mobile-nav">
+      <i class="fas fa-bars mobile-menu-btn"></i>
+      <ul class="mobile-menu slide-out display-none">
+        <li><a href="../HomePage/index.html">home</a></li>
         <li><a href="#services">services</a></li>
         <li><a href="#portfolio">portfolio</a></li>
         <li><a href="../MeetUsPage/meetus.html">meet us</a></li>
         <li><a href="../SecondPage/secondPage.html">contact</a></li>
-
       </ul>
+    </div>
+    <nav>
+      <div class="nav-wrap">
+        <a href="#"></a>
+        <div class="nav-right">
+          <ul class="desktop-menu">
+            <li><a href="../HomePage/index.html">home </a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="../MeetUsPage/meetus.html">meet us</a></li>
+            <li><a href="../SecondPage/secondPage.html">contact</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <h1 class="header-wording"><a href="./index.html"></a> Femina &ltLink&gt</h1>
+    <div class="bg">
+      <div class="bg-overlay"></div>
+    <h1 class="header-wording">
+      <a href="./index.html"></a> Femina &ltLink&gt
+    </h1>
     <p>Award-winning digital creativity</p>
   </section>
 </header>
